# fastdla

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  z2lgt.ipynb  z2lgt_dense.ipynb
docs/source/: conf.py  eigenspace.rst  index.rst  lie_closure.rst
docs/source/apidocs/: eigenspace.rst  generators.rst  lie_closure.rst  pauli.rst
fastdla/: __init__.py  closure.py  dla.py  dla_dense.py  dladim_dense.py  eigenspace.py  generator.py  lie_closure.py  pauli.py  sparse_pauli_sum.py  sparse_pauli_vector.py  sps_fast.py  spv_fast.py
fastdla/_closure_impl/: sparse_numba.py
fastdla/_generator_impl/: matrix.py  sparse.py
fastdla/_lie_closure_impl/: algorithms.py  hermitian_jax.py  matrix_jax.py  matrix_jax_ref.py  matrix_numba.py  realmatrix_jax.py  sparse_numba.py  sun_jax.py  un_jax.py
fastdla/algorithms/: block_diagonalization.py  gram_schmidt.py
fastdla/ansatze/: z2lgt_hva.py
fastdla/generators/: hea.py  heisenberg_hva.py  spin_chain.py  spin_glass.py  tfim_hva.py  z2lgt_hva.py  z2lgt_physical_hva.py
fastdla/linalg/: __init__.py  block_diagonalization.py  gram_schmidt.py  hermitian_ops_jax.py  matrix_ops.py  matrix_ops_jax.py  numba_ops.py  skewhermitian_ops_jax.py  symmetric_ops_jax.py  vector_ops.py
notebooks/: quantum_6_824.ipynb  z2lgt.ipynb  z2lgt_dense.ipynb
