[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastdla"
version = "0.9.0"
authors = [
  { name="Yutaro Iiyama", email="iiyama@icepp.s.u-tokyo.ac.jp" },
]
description = "Fast calculation of dynamical Lie algebra"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "jax[cuda12]"
]

[project.urls]
Homepage = "https://github.com/yiiyama/fastdla"
Issues = "https://github.com/yiiyama/fastdla/issues"
Documentation = "https://fastdla.readthedocs.io/en/latest/index.html"
